src/test/ui/feature-gates/feature-gate-abi.stderr
error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:16:8
   |
LL | extern "rust-intrinsic" fn f1() {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:18:8
   |
LL | extern "platform-intrinsic" fn f2() {}
   |        ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:20:8
   |
LL | extern "rust-call" fn f4(_: ()) {}
   |        ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:21:8
   |
LL | extern "efiapi" fn f10() {}
   |        ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:25:12
   |
LL |     extern "rust-intrinsic" fn m1();
   |            ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:27:12
   |
LL |     extern "platform-intrinsic" fn m2();
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:29:12
   |
LL |     extern "rust-call" fn m4(_: ());
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:30:12
   |
LL |     extern "efiapi" fn m10();
   |            ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:32:12
   |
LL |     extern "rust-call" fn dm4(_: ()) {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:33:12
   |
LL |     extern "efiapi" fn dm10() {}
   |            ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:40:12
   |
LL |     extern "rust-intrinsic" fn m1() {}
   |            ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:42:12
   |
LL |     extern "platform-intrinsic" fn m2() {}
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:44:12
   |
LL |     extern "rust-call" fn m4(_: ()) {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:45:12
   |
LL |     extern "efiapi" fn m10() {}
   |            ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:50:12
   |
LL |     extern "rust-intrinsic" fn im1() {}
   |            ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:52:12
   |
LL |     extern "platform-intrinsic" fn im2() {}
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:54:12
   |
LL |     extern "rust-call" fn im4(_: ()) {}
   |            ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:55:12
   |
LL |     extern "efiapi" fn im10() {}
   |            ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:59:18
   |
LL | type A1 = extern "rust-intrinsic" fn();
   |                  ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:60:18
   |
LL | type A2 = extern "platform-intrinsic" fn();
   |                  ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:61:18
   |
LL | type A4 = extern "rust-call" fn(_: ());
   |                  ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:62:19
   |
LL | type A10 = extern "efiapi" fn();
   |                   ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-abi.rs:65:8
   |
LL | extern "rust-intrinsic" {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: platform intrinsics are experimental and possibly buggy
  --> $DIR/feature-gate-abi.rs:66:8
   |
LL | extern "platform-intrinsic" {}
   |        ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(platform_intrinsics)]` to the crate attributes to enable

error[E0658]: rust-call ABI is subject to change
  --> $DIR/feature-gate-abi.rs:67:8
   |
LL | extern "rust-call" {}
   |        ^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0658]: efiapi ABI is experimental and subject to change
  --> $DIR/feature-gate-abi.rs:68:8
   |
LL | extern "efiapi" {}
   |        ^^^^^^^^
   |
   = note: see issue #65815 <https://github.com/rust-lang/rust/issues/65815> for more information
   = help: add `#![feature(abi_efiapi)]` to the crate attributes to enable

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:25:32
   |
LL |     extern "rust-intrinsic" fn m1();
   |                                ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:27:36
   |
LL |     extern "platform-intrinsic" fn m2();
   |                                    ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:16:33
   |
LL | extern "rust-intrinsic" fn f1() {}
   |                                 ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:18:37
   |
LL | extern "platform-intrinsic" fn f2() {}
   |                                     ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:40:37
   |
LL |     extern "rust-intrinsic" fn m1() {}
   |                                     ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:42:41
   |
LL |     extern "platform-intrinsic" fn m2() {}
   |                                         ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:50:38
   |
LL |     extern "rust-intrinsic" fn im1() {}
   |                                      ^^

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-abi.rs:52:42
   |
LL |     extern "platform-intrinsic" fn im2() {}
   |                                          ^^

error: aborting due to 34 previous errors

For more information about this error, try `rustc --explain E0658`.
